[gd_scene load_steps=6 format=3 uid="uid://dnid5wb0bl6t3"]

[ext_resource type="PackedScene" uid="uid://h8xyv50dpf2k" path="res://scenes/main_menu/main_menu.tscn" id="1_mem05"]
[ext_resource type="Script" path="res://scripts/menu_bar.gd" id="1_nyjb7"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_tm3op"]
[ext_resource type="PackedScene" uid="uid://yjlj4kf477hb" path="res://scenes/edit/edit_set.tscn" id="2_xycut"]
[ext_resource type="PackedScene" uid="uid://ci72srttjcup5" path="res://scenes/practice/practice_set.tscn" id="5_bolnk"]

[node name="Main" type="CanvasLayer"]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBar" type="MenuBar" parent="VBoxContainer"]
layout_mode = 2
script = ExtResource("1_nyjb7")

[node name="File" type="PopupMenu" parent="VBoxContainer/MenuBar"]
title = "File"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Menus" type="TabContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
current_tab = 0
tabs_visible = false
script = ExtResource("1_tm3op")

[node name="MainMenu" parent="VBoxContainer/MarginContainer/Menus" instance=ExtResource("1_mem05")]
layout_mode = 2
metadata/_tab_index = 0

[node name="EditSet" parent="VBoxContainer/MarginContainer/Menus" instance=ExtResource("2_xycut")]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="PracticeSet" parent="VBoxContainer/MarginContainer/Menus" instance=ExtResource("5_bolnk")]
visible = false
layout_mode = 2
current_tab = 0
metadata/_tab_index = 2
